# ProductControl

./: .gitignore  CLAUDE.md  README.md
backend/: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.dev.yml  pyproject.toml
backend/apps/accounts/: middleware.py  models.py  serializers.py  services.py  urls.py  views.py
backend/apps/accounts/migrations/: 0001_initial.py  0002_user_profile.py  0003_backfill_user_profiles.py  0004_user_must_change_password.py
backend/apps/accounts/tests/: conftest.py  test_auth_api.py  test_user_admin_api.py
backend/apps/authz/: apps.py  catalog.py  models.py  permissions.py  serializers.py  services.py  urls.py  views.py
backend/apps/authz/migrations/: 0001_initial.py  0002_seed_system_profiles.py  0003_patch_system_settings_perms.py
backend/apps/authz/tests/: test_authz_api.py  test_profile_admin_api.py  test_sensitive_fields.py  test_services.py
backend/apps/bulk_import/: apps.py  constants.py  parsers.py  serializers.py  services.py  urls.py  views.py
backend/apps/bulk_import/tests/: conftest.py  test_bulk_import_api.py
backend/apps/common/: audit.py  audit_rules.py  exceptions.py  models.py  validations.py
backend/apps/common/migrations/: 0001_initial.py
backend/apps/common/tests/: test_audit.py  test_audit_rules.py  test_exceptions.py  test_settings_helpers.py  test_validations.py
backend/apps/credit/: apps.py  models.py  serializers.py  services.py  urls.py  views.py
backend/apps/credit/migrations/: 0001_initial.py
backend/apps/credit/tests/: conftest.py  test_credit_api.py
backend/apps/directory/: apps.py  models.py  serializers.py  services.py  urls.py  views.py
backend/apps/directory/migrations/: 0001_initial.py  0002_ficha_price_list.py
backend/apps/directory/tests/: conftest.py  test_directory_api.py
backend/apps/period/: apps.py  models.py  selectors.py  services.py
backend/apps/period/migrations/: 0001_initial.py
backend/apps/period/tests/: test_period.py
backend/apps/pricing/: apps.py  models.py  serializers.py  services.py  urls.py  views.py
backend/apps/pricing/migrations/: 0001_initial.py
backend/apps/pricing/tests/: conftest.py  test_pricing_api.py
backend/apps/products/: models.py  serializers.py  services.py  urls.py  views.py
backend/apps/products/migrations/: 0001_initial.py  0002_seed_base_units.py
backend/apps/products/tests/: conftest.py  (+1 more)
backend/apps/system_settings/: apps.py  models.py  serializers.py  services.py  urls.py  views.py
backend/config/: urls.py
backend/config/settings/: base.py  dev.py  prod.py
(+222 files in other folders)
